refactor(config): 更新服务器配置和模型设置以优化性能
- 将多个聊天客户端的模型从 qwen3.5-flash 和 qwen-audio-turbo 统一为 qwen-turbo
- 更新 JVM 内存配置，将堆大小从 512m-1024m 调整为 1024m-2048m
- 将 Java 版本目标从默认升级至 Java 15
- 重构记录类为静态内部类以提高兼容性
- 更新控制器方法以支持匿名访问并改进参数处理
- 优化代码中的流操作收集方式